# cpp23-msvc-module-stacktrace-ice

./: CMakeLists.txt  README.md  main.cpp  module_that_uses_stacktrace.ixx
